# ReSeek

./: .gitignore  .replit  README.md  SETUP_GUIDE.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--Replit-Design-Prompt-Upgrade-Reset-UI-to-Analyst-Dashboard-Transform-the-frontend-of-Reset--1761645613731_1761645613732.txt  replit_rreseek_prompt_1761641262284.md
backend/: .env.example  alembic.ini  requirements.txt  seed_mock_data.py  test_app.py
backend/alembic/: env.py
backend/alembic/versions/: 04b9aac5e36e_initial_schema_with_all_models.py
backend/app/: config.py  database.py  main.py
backend/app/data/: nasdaq100.py
backend/app/models/: models.py
backend/app/providers/: base.py  finnhub.py  mock.py
backend/app/routes/: auth.py  chat.py  events.py  seed.py  watchlist.py
backend/app/services/: embedding_service.py  openai_service.py  qa_service.py  rag_service.py  summarization_service.py
backend/prompts/: abstractive.txt  chat_system.txt  extractive.txt
backend/scripts/: seed_mock_data.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ActivityFeed.jsx  CompanyLogo.jsx  EventCard.jsx  LiveTickerList.jsx  MentionsList.jsx  Sidebar.jsx  StockPicker.jsx  WatchlistPanel.jsx
frontend/src/pages/: CompanyDetail.css  CompanyDetail.jsx  Dashboard.css  Dashboard.jsx  Settings.jsx  Watchlist.jsx
