[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "apscheduler>=3.11.0",
    "fastapi>=0.120.1",
    "httpx>=0.28.1",
    "openai>=2.6.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "supabase>=2.22.2",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]
